# Project1

./: README.md  env.example  pyproject.toml
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
